--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="dp/profile_picture.png" wideth = "200" height = "200" alt=""></td>
+      <td><img src="images/profile_picture.png" wideth = "200" height = "200" alt=""></td>
       <td><h1>Subeer Nayak</h1>
       <p><em>Undergraduate Student at <strong><a href="https://www.iitm.ac.in">IIT Madras</a></strong></em></p>
       <p>I am Subeer Nayak, a current 4th year undergrad from department of Biotechnology IIT Madras looking for work in ML/DL space.</p></td>
